fix letterspacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     color: #444444;
     font-size: 1.6rem;
     font-family: "Montserrat", sans-serif;
+    letter-spacing: -0.05em;
 }
 /* ---------Common---------- */
 .content {
